apps/base/media-center/jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: media
  labels:
    app.kubernetes.io/name: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: jellyfin
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jellyfin
    spec:
      containers:
        - name: jellyfin
          image: jellyfin/jellyfin:12.1
          ports:
            - name: http
              containerPort: 8096
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /config
            - name: videos
              mountPath: /data/videos
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: jellyfin-config
        - name: videos
          persistentVolumeClaim:
            claimName: jellyfin-videos
