apps/base/media-center/jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: media
  labels:
    app.kubernetes.io/name: jellyfin
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8096
      protocol: TCP
  selector:
    app.kubernetes.io/name: jellyfin
