apps/base/media-center/jellyfin/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin
  namespace: media
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: kube-system
  hostnames:
    - jellyfin.nathan-fouere.com
  rules:
    - backendRefs:
        - name: jellyfin
          port: 80
